--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@digitalnative/standard-protocol-sdk": "^0.0.191",
     "@ethersproject/address": "^5.4.0",
     "@ethersproject/solidity": "^5.4.0",
     "@nomiclabs/hardhat-ethers": "^2.0.0",
@@ -37,15 +38,18 @@
     "@nomiclabs/hardhat-waffle": "^2.0.0",
     "@openzeppelin/contracts": "^4.4.2",
     "@openzeppelin/hardhat-upgrades": "^1.13.0",
+    "@primitivefi/hardhat-marmite": "^0.0.4",
     "@remix-project/remixd": "^0.5.1",
     "@sushiswap/prettier-config": "^0.1.0",
     "@sushiswap/sdk": "5.0.0-canary.66",
-    "@tenderly/hardhat-tenderly": "^1.0.0",
+    "@tenderly/hardhat-tenderly": "^1.3.0",
     "@typechain/ethers-v5": "^7.0.0",
     "@typechain/hardhat": "^6.1.2",
     "@types/chai": "^4.0.0",
+    "@types/inquirer": "^9.0.2",
     "@types/mocha": "^8.0.0",
     "@types/node": "^16.0.0",
+    "base64-sol": "^1.1.0",
     "chai": "^4.0.0",
     "cross-env": "^7.0.0",
     "decimal.js": "^10.0.0",
@@ -53,9 +57,10 @@
     "eip-712": "^0.4.3",
     "ethereum-waffle": "^3.0.0",
     "ethers": "^5.0.0",
+    "hardhat": "2.8.0",
     "hardhat-abi-exporter": "^2.9.0",
     "hardhat-contract-sizer": "^2.1.1",
-    "hardhat-deploy": "^0.8.0",
+    "hardhat-deploy": "^0.8.10",
     "hardhat-deploy-ethers": "^0.3.0-beta.10",
     "hardhat-gas-reporter": "^1.0.7",
     "hardhat-interface-generator": "^0.0.6",
@@ -73,16 +78,13 @@
     "solhint": "^3.0.0",
     "solhint-plugin-prettier": "^0.0.5",
     "solidity-coverage": "^0.7.0",
+    "tenderly": "^0.0.2",
     "ts-generator": "^0.1.0",
     "ts-node": "^10.0.0",
     "typechain": "^5.0.0",
-    "typescript": "^4.0.0",
-    "@primitivefi/hardhat-marmite": "^0.0.4",
-    "@digitalnative/standard-protocol-sdk": "^0.0.191",
-    "base64-sol": "^1.1.0"
+    "typescript": "^4.0.0"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "release": {
     "analyzeCommits": "simple-commit-message"
   },
