--- a/package.json
+++ b/package.json
@@ -1,9 +1,18 @@
 {
-  "name": "standard-evm",
+  "name": "standard-2.0",
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "send-eth": "npx hardhat run scripts/sendEth.js",
+    "graph-codegen": "cd subgraph && graph codegen",
+    "graph-build": "cd subgraph && graph build",
+    "graph-test": "graph test",
+    "graph-local": "docker-compose up",
+    "graph-local-clean": "docker-compose down -v && docker-compose rm -v && rm -rf data/ipfs data/postgres",
+    "create-local": "graph create --node http://127.0.0.1:8020 nft-auction",
+    "deploy-local": "cd new-order-contracts && graph deploy --ipfs http://127.0.0.1:5001 --node http://127.0.0.1:8020 nft-auction",
+    "hardhat-local": "hardhat node --hostname 0.0.0.0",
     "build": "hardhat compile",
     "console": "hardhat console",
     "fork": "hardhat node --fork ",
@@ -27,21 +36,17 @@
   },
   "keywords": [],
   "author": "",
-  "license": "Apache-2.0",
+  "license": "BUSL-1.1",
   "devDependencies": {
-    "@digitalnative/standard-protocol-sdk": "^0.0.191",
-    "@ethersproject/address": "^5.4.0",
-    "@ethersproject/solidity": "^5.4.0",
+    "@graphprotocol/graph-cli": "^0.30.0",
+    "@graphprotocol/graph-ts": "^0.27.0",
     "@nomiclabs/hardhat-ethers": "^2.0.0",
     "@nomiclabs/hardhat-etherscan": "^3.0.1",
     "@nomiclabs/hardhat-solhint": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
-    "@openzeppelin/contracts": "^4.4.2",
+    "@openzeppelin/contracts": "^4.8.2",
     "@openzeppelin/hardhat-upgrades": "^1.13.0",
-    "@primitivefi/hardhat-marmite": "^0.0.4",
     "@remix-project/remixd": "^0.5.1",
-    "@sushiswap/prettier-config": "^0.1.0",
-    "@sushiswap/sdk": "5.0.0-canary.66",
     "@tenderly/hardhat-tenderly": "^1.3.0",
     "@typechain/ethers-v5": "^7.0.0",
     "@typechain/hardhat": "^6.1.2",
@@ -52,17 +57,17 @@
     "base64-sol": "^1.1.0",
     "chai": "^4.0.0",
     "cross-env": "^7.0.0",
-    "decimal.js": "^10.0.0",
     "dotenv": "^10.0.0",
     "eip-712": "^0.4.3",
     "ethereum-waffle": "^3.0.0",
-    "ethers": "^5.0.0",
+    "ethers": "^5.7.2",
     "hardhat": "2.8.0",
     "hardhat-abi-exporter": "^2.9.0",
     "hardhat-contract-sizer": "^2.1.1",
     "hardhat-deploy": "^0.8.10",
     "hardhat-deploy-ethers": "^0.3.0-beta.10",
     "hardhat-gas-reporter": "^1.0.7",
+    "hardhat-graph": "https://github.com/graphprotocol/hardhat-graph",
     "hardhat-interface-generator": "^0.0.6",
     "hardhat-log-remover": "^2.0.0",
     "hardhat-preprocessor": "^0.1.0",
@@ -72,19 +77,22 @@
     "husky": "^7.0.0",
     "inquirer": "^8.1.5",
     "lint-staged": "^11.0.1",
+    "pre-git": "^3.17.1",
     "prettier": "^2.3.2",
     "prettier-plugin-solidity": "^1.0.0-beta.17",
-    "seedrandom": "^3.0.5",
     "solhint": "^3.0.0",
     "solhint-plugin-prettier": "^0.0.5",
-    "solidity-coverage": "^0.7.0",
+    "solidity-coverage": "^0.8.2",
     "tenderly": "^0.0.2",
     "ts-generator": "^0.1.0",
     "ts-node": "^10.0.0",
     "typechain": "^5.0.0",
     "typescript": "^4.0.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@foundry-rs/hardhat-forge": "^0.1.17",
+    "solidity-docgen": "^0.6.0-beta.35"
+  },
   "release": {
     "analyzeCommits": "simple-commit-message"
   },
