--- a/package.json
+++ b/package.json
@@ -1,15 +1,26 @@
 {
-  "name": "new-order-contracts",
-  "version": "1.1.0",
-  "description": "",
-  "main": "index.js",
+  "name": "@standardweb3/v2-core",
+  "description": "core smart contracts for standard protocol v2",
+  "license": "BUSL-1.1",
+  "publishConfig": {
+    "access": "public"
+  },
+  "version": "0.0.0",
+  "homepage": "https://standardweb3.com",
+  "keywords": [
+    "standard",
+    "core",
+    "v2"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Uniswap/uniswap-v3-core"
+  },
+  "files": [
+    "contracts/sabt",
+    "contracts/safex"
+  ],
   "scripts": {
-    "send-eth": "npx hardhat run scripts/sendEth.js",
-    "graph-codegen": "cd subgraph && graph codegen",
-    "graph-build": "cd subgraph && graph build",
-    "graph-test": "graph test",
-    "graph-local": "docker-compose up",
-    "graph-local-clean": "docker-compose down -v && docker-compose rm -v && rm -rf data/ipfs data/postgres",
     "create-local": "graph create --node http://127.0.0.1:8020 nft-auction",
     "deploy-local": "cd new-order-contracts && graph deploy --ipfs http://127.0.0.1:5001 --node http://127.0.0.1:8020 nft-auction",
     "hardhat-local": "hardhat node --hostname 0.0.0.0",
@@ -34,12 +45,8 @@
     ],
     "*.md": "prettier --write"
   },
-  "keywords": [],
-  "author": "",
-  "license": "BSL-1.1",
+  "author": "Hyungsuk Kang <hskang9@gmail.com>",
   "devDependencies": {
-    "@graphprotocol/graph-cli": "^0.30.0",
-    "@graphprotocol/graph-ts": "^0.27.0",
     "@nomiclabs/hardhat-ethers": "^2.0.0",
     "@nomiclabs/hardhat-etherscan": "^3.0.1",
     "@nomiclabs/hardhat-solhint": "^2.0.0",
@@ -91,6 +98,7 @@
   },
   "dependencies": {
     "@foundry-rs/hardhat-forge": "^0.1.17",
+    "@openzeppelin/contracts-upgradeable": "^4.8.3",
     "solidity-docgen": "^0.6.0-beta.35"
   },
   "release": {
