--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,31 @@
-# Compiler files
-cache/
-out/
-
-# Ignores development broadcast logs
-!/broadcast
-/broadcast/*/31337/
-/broadcast/**/dry-run/
-
-# Docs
-docs/
-
-# Dotenv file
+.idea/
 .env
+
+build/
+.DS_Store
+coverage/
+coverage.json
+.vscode
+bin
+build-info
+
+
+*.log
+!deployments/*.log
+node_modules
+artifacts
+cache
+cache_hardhat
+tenderly.yaml
+node_modules
+scripts
+address-book.json
+types
+types/*
+.gas
+data
+out
+node_modules
+foundry.toml
+script/Constants.sol
+broadcast
