--- a/foundry.toml
+++ b/foundry.toml
@@ -1,6 +1,11 @@
 [profile.default]
+ffi = true
+ast = true
+build_info = true
+extra_output = ["storageLayout"]
 src = "src"
 out = "out"
 libs = ["lib"]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+
